added the background images and updated the html file to correct the error on spelling of stylesheet.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>STONE IMAGES</title>
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel = 'stylesheets' href ="css/style.css">
+    <link rel = 'stylesheet' href ="css/style.css">
 </head>
 <body>
     <!-- header -->
@@ -16,7 +16,7 @@
         <div class = "container">
             <div class ="header-content" >
                 <h1>Hey, I'm a <br>
-                    <span class="typewrite"></span>
+                    <span class="typewrite" data-loop="yes" data-speed="100" data-delay="2000" data-words='["Photographer", "Videographer", "Dope Editor"]'></span>
                 </h1>
                 <h3>TSAUBAH STONE</h3>
 
@@ -40,6 +40,25 @@
             </div>
         </div>
     </header>
+<!-- main content -->
+    <main>
+<!-- about section  -->
+        <section id ="about" class="about stone">
+            <div class="container"> 
+                <div clsss="about-content grid">
+                    <img src ="images/cam me.jpg" alt="stone chilling">
+                </div>
+                <div class ="about-right">
+                    <div class=" tittle">
+                        <h2>About Me</h2>
+                    </div>
+                    <p>Tsaubah Stone is the prioperter of Stone Images. A badass chick and a badass photographer. Give me all your money. You will not regret it. take a look arroung if you like what you see. <span><a href="www.youtube.com">HIRE ME</span></p>
+                </div>     
+            </div>
+        </section>
+<!-- end of about section  -->
+    </main>
+<!-- end of main content -->
    <script src="typewriting-master/typewriting.js"></script>
 </body>
 </html>
