changes to index file

--- a/index.html
+++ b/index.html
@@ -46,14 +46,21 @@
         <section id ="about" class="about stone">
             <div class="container"> 
                 <div clsss="about-content grid">
-                    <img src ="images/cam me.jpg" alt="stone chilling">
-                </div>
-                <div class ="about-right">
-                    <div class=" tittle">
-                        <h2>About Me</h2>
+                    <div class="about-left">
+                        <img src ="images/cam me.jpg" alt="stone chilling">
                     </div>
-                    <p>Tsaubah Stone is the prioperter of Stone Images. A badass chick and a badass photographer. Give me all your money. You will not regret it. take a look arroung if you like what you see. <span><a href="www.youtube.com">HIRE ME</span></p>
-                </div>     
+                
+                    <div class ="about-right">
+                        <div class=" title">
+                            <h2>About Me</h2>
+                        </div>
+                        <p class = "lead" >Tsaubah Stone is the prioperter of Stone Images. Tsaubah is an experienced all round photographer. She has travelled the world taking amazing pictures for the national Basketball Team. She has taken pictures showcasing the way of life of different tribal groups around Uganda. She is currently based out of Kampala. </p>
+                        <p class = "lead">Checkout her recent work and experiences below. Tsauba considers photography as her passion more than her profession.</p>
+                        <a href="#work" class ="btn-down">
+                            <i class = "fas fa-chevron-down"></i>
+                        </a>
+                    </div>     
+                </div>
             </div>
         </section>
 <!-- end of about section  -->
