finalised work section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>STONE IMAGES</title>
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel = 'stylesheet' href ="css/style.css">
 </head>
 <body>
@@ -43,19 +46,18 @@
 <!-- main content -->
     <main>
 <!-- about section  -->
-        <section id ="about" class="about stone">
+        <section id ="about" class="about py-7">
             <div class="container"> 
-                <div clsss="about-content grid">
+                <div class="about-content grid">
                     <div class="about-left">
                         <img src ="images/cam me.jpg" alt="stone chilling">
                     </div>
-                
                     <div class ="about-right">
                         <div class=" title">
                             <h2>About Me</h2>
                         </div>
-                        <p class = "lead" >Tsaubah Stone is the prioperter of Stone Images. Tsaubah is an experienced all round photographer. She has travelled the world taking amazing pictures for the national Basketball Team. She has taken pictures showcasing the way of life of different tribal groups around Uganda. She is currently based out of Kampala. </p>
-                        <p class = "lead">Checkout her recent work and experiences below. Tsauba considers photography as her passion more than her profession.</p>
+                        <p class = "lead" >Tsaubah Stone is the proprietor of Stone Images. Tsaubah is an experienced all round photographer. She has travelled the world taking amazing pictures for the national Basketball Team. She has taken pictures showcasing the way of life of different tribal groups around Uganda. She is currently based out of Kampala. </p>
+                        <p class = "lead">Checkout her recent work and experiences below. </p>
                         <a href="#work" class ="btn-down">
                             <i class = "fas fa-chevron-down"></i>
                         </a>
@@ -64,6 +66,57 @@
             </div>
         </section>
 <!-- end of about section  -->
+
+<!-- work section -->
+<section id ="work" class="vh-100 flex">
+    <div class ="container">
+        <div class ="work-content">
+            <div class ="title">
+                <h2>Our Promise </h2>
+                <ul>
+                    <li class="lead"><i class="fas fa-dot-circle"></i> Your files will be stored in two separate locations to avoid data loss</li>
+                    <li class="lead"><i class="fas fa-dot-circle"></i> We always have back-up equipment at hand</li>
+                    <li class="lead"><i class="fas fa-dot-circle"></i> You will look like yourself. Not a reincration of botoxed lady.</li>
+                    <li class="lead"><i class="fas fa-dot-circle"></i> We work according to set professional guideliness followed by photographers and videographers around the world with regard to color management and file handling.</li>
+                </ul>
+                <div class ="work-bottom grid">
+                    <div>
+                        <span class ="icon"><img src ="/images/sports/STN07725.JPG"></span>
+                        <h3>Sports</h3>
+                    </div>
+                    <div>
+                        <span class ="icon"><img src ="/images/Documentary/STN03887.JPG"></span>
+                        <h3>Documentary</h3>
+                    </div>
+                    <div>
+                        <span class ="icon"><img src ="/images/weddings/DSC_4812.JPG"></span>
+                        <h3>Wedding</h3>
+                    </div>
+                    <div>
+                        <span class ="icon"><img src ="/images/freestyle/STN04769.JPG"></span>
+                        <h3>Freestyle</h3>
+                    </div>
+                    <div>
+                        <span class ="icon"><img src ="/images/Potraits/_DSC4784.JPG"></span>
+                        <h3>Potraits</h3>
+                    </div>
+                    <div>
+                        <span class ="icon"><img src ="/images/Documentary/STN01366.JPG"></span>
+                        <h3>Wildlife</h3>
+                    </div>
+                </div>
+                <a href="#portfolio" class ="btn-down btn-down-white">
+                    <i class ="fas fa-chevron-down"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end of work section  -->
+<!-- portfolio section -->
+
+<!-- end of portfolio section -->
+
     </main>
 <!-- end of main content -->
    <script src="typewriting-master/typewriting.js"></script>
