Made changes to outlay added sections fro instagram and portfolio

--- a/index.html
+++ b/index.html
@@ -113,12 +113,105 @@
     </div>
 </section>
 <!-- end of work section  -->
-<!-- portfolio section -->
 
+<!-- portfolio section -->
+<section id="portfolio" class ="vh-100 py-7">
+    <div class = "container">
+        <div class="portfolio-content">
+            <div class = "title">
+                <h2>My Last works</h2>
+                <a href ="#contact" class ="btn-down">
+                    <i class ="fas fa-chevron-down"></i>
+                </a>
+            </div>
+           
+            <div class="portfolio-grid grid" >
+                <div><img src="images/Documentary/_DSC0185.JPG"></div>
+                <div><img src="images/Documentary/_DSC0855.JPG"></div>
+                <div><img src="images/Documentary/_DSC0794.JPG"></div>
+                <div><img src="images/Documentary/_DSC0806.JPG"></div>
+                <div><img src="images/Documentary/DSC_1196.JPG"></div>
+                <div><img src="images/Documentary/_DSC0922.JPG"></div>
+                <div><img src="images/Documentary/DJI_0681.JPG"></div>
+                <div><img src="images/Documentary/DSC05438.JPG"></div>
+                <div><img src="images/Documentary/DSC05440.JPG"></div>
+                <div><img src="images/Documentary/_DSC0188.JPG"></div>
+                <div><img src="images/Documentary/STN01355.JPG"></div>
+            </div>
+        </div>
+    </div>
+</section>
 <!-- end of portfolio section -->
 
+<!-- contact section -->
+<section id="contact" class="py-7">
+    <div class="container">
+        <div class="contact-content flex">
+            <div class="contact-left">
+                <div class="title">
+                    <h2>Connect with me</h2>
+                </div>
+                <p class="lead"><i class="fas fa-phone-alt"></i> +256 776 126667</p>
+                <p class="lead"><i class="fas fa-envelope"></i> tsaubah.ts@gmail.com</p>
+                <form action="">
+                    <input type="text" class ="form-control" placeholder="Your name here...">
+                    <input type="email" class="form-control" placeholder="Your email here">
+                    <input type="submit" class="btn-submit btn" value ="Submit">
+                </form>
+            </div>
+            <div class="contact-right">
+                <img src="images/contact-pic.jpeg" alt="contact image">
+            </div>
+        </div> 
+    </div>
+</section>
+<!-- end of contact section -->
+<!-- instagram section -->
+<section id="insta" class="py-7" >
+    <div class="container">
+        <div class="insta-content">
+            <div class="title">
+                <h2>Instagram</h2>
+                <a href="#footer" class="btn-down btn-down-white">
+                    <i class="fas fa-chevron-down"></i>
+                </a>
+            </div>
+            <div class="insta-grid grid">
+                <div><img src="images/Documentary/STN03103.JPG"></div>
+                <div><img src="images/Documentary/STN03095.JPG"></div>
+                <div><img src="images/Documentary/STN03122.JPG"></div>
+                <div><img src="images/Documentary/STN03887.JPG"></div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end of instagram section -->
     </main>
 <!-- end of main content -->
+<!-- footer -->
+<footer id="footer" class="py-7">
+    <div class="container">
+        <div class="footer-content">
+            <div>
+                <h3>TSAUBAH STONE</h3>
+                <div><img src="images/cam me.jpg"></div>
+            </div>
+        </div>
+        <div>
+            <h3>Links</h3>
+            <ul class="flex">
+                <li><a href="#">About Me</li>
+                <li><a href="#">Work</li>
+                <li><a href="#">Portfolio</li>
+                <li><a href="#">Contact Me</li>
+                <li><a href="#">Instagram</li>
+            </ul>
+
+        </div>
+    </div>
+</footer>
+<!-- end of footer -->
    <script src="typewriting-master/typewriting.js"></script>
 </body>
+
 </html>
