Correcting error in index file in the footer

--- a/index.html
+++ b/index.html
@@ -81,29 +81,22 @@
                 </ul>
                 <div class ="work-bottom grid">
                     <div>
-                        <span class ="icon"><img src ="/images/sports/STN07725.JPG"></span>
-                        <h3>Sports</h3>
+                        <span class ="icon"><img src ="/images/landscape-icon.png"></span>
+                        <h3>Landscape</h3>
                     </div>
                     <div>
-                        <span class ="icon"><img src ="/images/Documentary/STN03887.JPG"></span>
+                        <span class ="icon"><img src ="/images/wildlife-icon.png"></span>
                         <h3>Documentary</h3>
                     </div>
                     <div>
-                        <span class ="icon"><img src ="/images/weddings/DSC_4812.JPG"></span>
-                        <h3>Wedding</h3>
+                        <span class ="icon"><img src ="/images/family-icon.png"></span>
+                        <h3>Family</h3>
                     </div>
                     <div>
-                        <span class ="icon"><img src ="/images/freestyle/STN04769.JPG"></span>
-                        <h3>Freestyle</h3>
-                    </div>
-                    <div>
-                        <span class ="icon"><img src ="/images/Potraits/_DSC4784.JPG"></span>
+                        <span class ="icon"><img src ="/images/portrait-icon.png"></span>
                         <h3>Potraits</h3>
                     </div>
-                    <div>
-                        <span class ="icon"><img src ="/images/Documentary/STN01366.JPG"></span>
-                        <h3>Wildlife</h3>
-                    </div>
+                   
                 </div>
                 <a href="#portfolio" class ="btn-down btn-down-white">
                     <i class ="fas fa-chevron-down"></i>
@@ -196,18 +189,20 @@
                 <h3>TSAUBAH STONE</h3>
                 <div><img src="images/cam me.jpg"></div>
             </div>
-        </div>
-        <div>
-            <h3>Links</h3>
-            <ul class="flex">
-                <li><a href="#">About Me</li>
-                <li><a href="#">Work</li>
-                <li><a href="#">Portfolio</li>
-                <li><a href="#">Contact Me</li>
-                <li><a href="#">Instagram</li>
-            </ul>
+        
+            <div>
+                <h3>Links</h3>
+                <ul class="flex">
+                    <li><a href="#">About Me</li>
+                    <li><a href="#">Work</li>
+                    <li><a href="#">Portfolio</li>
+                    <li><a href="#">Contact Me</li>
+                    <li><a href="#">Instagram</li>
+                </ul>
 
+            </div>
         </div>
+    </div>
     </div>
 </footer>
 <!-- end of footer -->
