--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- end of about section  -->
 
 <!-- work section -->
-<section id ="work" class="vh-100 flex">
+<section id ="work" class="vh-100 flex py-7">
     <div class ="container">
         <div class ="work-content">
             <div class ="title">
